--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 name: Test project
 
 on: 
-  # Triggered on push to 'main' branch
-  # push:
-  #   branches:
-  #     - 'main'
+  # Triggered on pull request to 'main' branch
+  pull_request:
+      branches: [ master ]
+  
   # Can be triggered manually from the Actions tab
   workflow_dispatch:
 
