--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Test project
 on: 
   # Triggered on pull request to 'main' branch
   pull_request:
-      branches: [ master ]
+      branches: [ main ]
   
   # Can be triggered manually from the Actions tab
   workflow_dispatch:
